# opthub-runner-admin

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Makefile.default  README.md  README_ja.md  config.default.dev.yml  config.default.yml  mypy.ini  opthub-evaluator.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: add_to_project.yml  release-please.yml  release.yml
.github/workflows/actions/poetry_publish/: action.yml
example/best/: best.py
example/sphere-2-1/: run.py  sphere-2-1.py
example/sphere-2-2/: sphere-2-2.py
examples/: README.md
examples/best/: Dockerfile  best.py
examples/sphere-2-1/: Dockerfile  sphere-2-1.py
examples/sphere-2-2/: Dockerfile  sphere-2-2.py
opthub_runner/: args.py  keys.py  main.py  opthub-runner.yml
opthub_runner/evaluator/: args.py  main.py
opthub_runner/lib/: appsync.py  cache.py  docker_executor.py  dynamodb.py  keys.py  runner_sqs.py  schema.py  scorer_history.py  sqs.py  thread.py  zfill.py
opthub_runner/model/: evaluation.py  match.py  score.py  solution.py
opthub_runner/models/: evaluation.py  match.py  schema.py  score.py  solution.py
opthub_runner/scorer/: cache.py  history.py  main.py
opthub_runner/utils/: cache.py  credentials.py  docker.py  docker_executer.py  dynamodb.py  runner_sqs.py  scorer_history.py  sqs.py  zfill.py
opthub_runner_admin/: args.py  environments.py  main.py  opthub-runner.yml
opthub_runner_admin/evaluator/: main.py
opthub_runner_admin/lib/: appsync.py  docker_executor.py  dynamodb.py  sqs.py
opthub_runner_admin/models/: evaluation.py  exception.py  match.py  schema.py  score.py  solution.py
opthub_runner_admin/scorer/: cache.py  history.py  main.py
opthub_runner_admin/utils/: converter.py  dir.py  docker.py  process.py  time.py  truncate.py
opthub_runner_admin/utils/credentials/: cipher_suite.py  credentials.py  utils.py
src/: __init__.py  evaluator.py  main.py  model.py  scorer.py  test.py
src/evaluator/: main.py  model.py
src/evaluator_old/: main.py
src/model/: context.py  evaluation.py  match.py  score.py  solution.py
src/scorer/: main.py
src/scorer_old/: main.py  model.py
src/utils/: cache.py  cache_old.py  converter.py  docker.py  docker_executor.py  dynamoDB.py  execute_in_docker.py  gql_executor.py  keys.py  runnerSQS.py  runner_sqs.py  scorer_history.py  sqs.py  zfill.py
tests/: sample_test.py
tests/lib/: cache.py  dynamodb.py  scorer_history.py  sqs.py  test_appsync.py  test_docker_executor.py  test_dynamodb.py  test_sqs.py  test_thread.py
tests/model/: test_evaluation.py  test_score.py  test_solution.py
tests/models/: test_evaluation.py  test_exception.py  test_match.py  test_score.py  test_solution.py
tests/scorer/: test_cache.py  test_history.py
tests/utils/: docker_executor.py  scorer_history.py  test_zfill.py
