[tool.poetry]
name = "opthub_runner"
version = "0.1.0"
description = ""
authors = ["OptHub Inc. <dev@opthub.ai>"]
readme = "README.md"

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "ANN101",   # Don't require type hints for self.
    "D104",     # Don't require docstrings for public packages.
    "RET504",   # Allow assignment before return
    "FBT001",   # Allow bool type positional arguments
    "TD002",    # Allow unassigned todos
    "TD003",    # Allow todos without issue
    "TRY301",   # Allow abstract `raise` to an inner function
    "DTZ005",   # Allow timezone naive datetime
    "BLE001",   # Allow builtin exceptions
]
lint.exclude = [
    "examples/**/*",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.poetry.dependencies]
python = "3.12.1"
click = "^8.1.7"
gql = "^3.5.0"
aiohttp = "^3.9.3"
boto3 = "^1.34"
docker = "^7.0.0"
PyYAML = "^6.0"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
mypy = "^1.9.0"
pytest = "^8.1.1"
boto3-stubs = {extras = ["dynamodb", "sqs"], version = "^1.34"}
types-boto3 = "^1.0.2"
types-PyYAML = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
opthub-runner = "opthub_runner.main:run"
